# project_training_trang8_le

./: README.md  configure.ac  oemcallapp.json  oemcallapp25.json  oemcallapp255.json  oemcallapp26.json
src/: Makefile.am  logger.cpp  logger.h  message_defs.h  oem_call_app.cpp  oem_call_app.h  oem_call_app_constants.h  oem_call_app_if.h  oem_call_handler.cpp  oem_call_handler.h  oem_call_timer.cpp  oem_call_timer.h
src/data/: data_builder_rcall.cpp  data_builder_rcall.h  data_builder_us.cpp  data_builder_us.h  data_collector_can.cpp  data_collector_can.h  data_collector_gps.cpp  data_collector_gps.h  i_data_builder.h
src/processor/: acn_phone_processor.cpp  acn_phone_processor.h  processor_base.h  processor_manager.cpp  processor_manager.h  r_call_jp_processor.cpp  r_call_jp_processor.h
src/services_adapter/: app_manager_adapter.cpp  app_manager_adapter.h  audio_manager_adapter.cpp  audio_manager_adapter.h  config_manager_adapter.cpp  config_manager_adapter.h  hmi_manager_adapter.cpp  hmi_manager_adapter.h  power_manager_adapter.cpp  power_manager_adapter.h  receiver_manager.cpp  receiver_manager.h  rim_adapter.cpp  rim_adapter.h  someip_manager.cpp  someip_manager.h  telephone_manager_adapter.cpp  telephone_manager_adapter.h
src/tspecall/core/: ECallApp2.cpp  ECallApp2.h
src/tspecall/core/processors/: IProcessorBase.h  ProcessorsManager.cpp  ProcessorsManager.h
src/tspecall/core/services/: AlarmManagerAdapter.cpp  AlarmManagerAdapter.h  ApplicationManagerAdapter.cpp  ApplicationManagerAdapter.h  AudioManagerAdapter.cpp  AudioManagerAdapter.h  CommunicationManagerAdapter.cpp  CommunicationManagerAdapter.h  ConfigurationManagerAdapter.cpp  ConfigurationManagerAdapter.h  DisconnectCause.h  HMIManagerAdapter.cpp  HMIManagerAdapter.h  HTTPSManagerAdapter.cpp  HTTPSManagerAdapter.h  LocationManagerAdapter.cpp  LocationManagerAdapter.h  PowerManagerAdapter.cpp  PowerManagerAdapter.h  RemoteIfManagerAdapter.cpp  RemoteIfManagerAdapter.h  ServiceAdapterTimerId.h  SystemPropertyAdapter.cpp  SystemPropertyAdapter.h  TelephoneManagerAdapter.cpp  TelephoneManagerAdapter.h  TimeManagerAdapter.cpp  TimeManagerAdapter.h  VehicleManagerAdapter.cpp  VehicleManagerAdapter.h  VehicleVariationAdapter.cpp  VehicleVariationAdapter.h
src/tspecall/core/utils/: BackgroundTask.cpp  BackgroundTask.h  CommonFunctions.cpp  CommonFunctions.h  ECallAppHandler.cpp  ECallAppHandler.h  ECallTimerHandler.h  EventDataBase.h  IECallAppIf.h  ParamsDef.h  ServiceDeathRecipient.h
src/tspecall/variant/honda/msd/: DataBuilderCPDSmartphone.cpp  DataBuilderCPDSmartphone.h  DataBuilderUS.cpp  DataBuilderUS.h  IDataBuilder.h
src/tspecall/variant/honda/processors/: CPDSmartphoneProcessor.cpp  CPDSmartphoneProcessor.h  ECallState.cpp  ECallState.h  ECallVariableRepo.cpp  ECallVariableRepo.h  InternalParamsDef.h  NADESSECall.cpp  NADESSECall.h  NAECallProcessor.cpp  NAECallProcessor.h  NAECallRecovery.cpp  NAECallRecovery.h  NAECallStateMachine.cpp  NAECallStateMachine.h  NAECallStates.cpp  NAECallStates.h
src/utils/: utils_common.cpp  utils_common.h
uts/unittests/: CMakeLists.txt  lcovrc
uts/unittests/scripts/cmake/: CodeCoverage.cmake  TargetRun.cmake
uts/unittests/testscripts/: UT_GMOCK_acn_phone_processor.cpp  UT_GMOCK_data_builder_rcall.cpp  UT_GMOCK_data_builder_us.cpp  UT_GMOCK_data_collector_can.cpp  UT_GMOCK_data_collector_gps.cpp  UT_GMOCK_logger.cpp  UT_GMOCK_oem_call_app.cpp  UT_GMOCK_oem_call_handler.cpp  UT_GMOCK_oem_call_timer.cpp  UT_GMOCK_processor_manager.cpp  UT_GMOCK_r_call_jp_processor.cpp  UT_GMOCK_receiver_manager.cpp  UT_GMOCK_someip_manager.cpp  UT_GMOCK_utils_common.cpp  gtest_main.cpp
uts/unittests/testscripts/mock/include/: Application_mock.h  ISystemPostReceiver_mock.h  hal_system_tsu_mock.h
uts/unittests/testscripts/mock/service/: AppManager_mock.h  ApplicationManager_mock.h  Application_mock.h  Binder_mock.h  BpBinder_mock.h  Buffer_mock.h  ConfigManager_mock.h  ConfigurationManagerService_mock.h  HMIManager_mock.h  Handler_mock.h  IBinder_mock.h  IInterface_mock.h  ILocationManager_mock.h  IPowerManagerService_mock.h  IServiceManager_mock.h  ISomeipProviderManagerService_mock.h  OperationModeManager_mock.h  PowerLock_mock.h  PowerManager_mock.h  SomeipProviderManager_mock.h  TimerManager_mock.h  Timer_mock.h  android_service_mock.h  core_SystemService_mock.h
uts/unittests/testscripts/mock/src/: logger_mock.h  message_defs_mock.h  oem_call_app_constants_mock.h  oem_call_app_if_mock.h  oem_call_app_mock.h  oem_call_handler_mock.h  oem_call_timer_mock.h  oemcall_app2_mock.h
uts/unittests/testscripts/mock/src/data/: data_builder_rcall_mock.h  data_builder_us_mock.h  data_collector_can_mock.h  data_collector_gps_mock.h  i_data_builder_mock.h
uts/unittests/testscripts/mock/src/processor/: acn_phone_processor_mock.h  processor_base_mock.h  processor_manager_mock.h  r_call_jp_processor_mock.h
uts/unittests/testscripts/mock/src/receiver/: receiver_manager_mock.h  someip_manager_mock.h
uts/unittests/testscripts/mock/src/services_adapter/: app_manager_adapter_mock.h  audio_manager_adapter_mock.h  comm_manager_adapter_mock.h  config_manager_adapter_mock.h  hmi_manager_adapter_mock.h  power_manager_adapter_mock.h  rim_adapter_mock.h  telephone_manager_adapter_mock.h  vehicle_variation_info_adapter_mock.h
uts/unittests/testscripts/mock/src/utils/: utils_common_mock.h
uts/unittests/testscripts/mock/tsp_mock/header_mock/: ApplicationManagerAdapter_Base.h  AtpLog_Base.hpp  ECallAppHandler_Base.h  HTTPSManagerAdapter_Base.h  IApplicationManagerService_Base.h  Message_Base.h  NAECallProcessor_Base.h  logger_Base.h
uts/unittests/testscripts/mock/tsp_mock/service_adapter/: AlarmManagerAdapter_mock.h  ApplicationManagerAdapter_mock.h  AudioManagerAdapter_mock.h  CommunicationManagerAdapter_mock.h  ConfigurationManagerAdapter_mock.h  HMIManagerAdapter_mock.h  HTTPSManagerAdapter_mock.h  (+7 more)
uts/unittests/testscripts/tsp_src/: UT_GMOCK_ApplicationManagerAdapter.cpp  UT_GMOCK_HTTPSManagerAdapter.cpp  UT_GMOCK_NAECallProcessor.cpp  UT_GMOCK_TelephoneManagerAdapter.cpp
(+21 files in other folders)
